# heat_calculator

./: .gitignore  calc_zmodyfikowany.py  dekorator.py  example.csv  example.xlsx  heatcalc.sqlite  main.py  models.py  models_xlsx_csv_import.py  pyproject.toml  wall_config.xlsx
heat_conduction_interface/: form.ui  main.py
