[tool.poetry]
name = "heat_calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pyqt5 = "^5.15.1"
pyside2 = "^5.15.1"
pony = "^0.7.13"
pendulum = "^2.1.2"
xlrd = "^1.2.0"
click = "^7.1.2"
ipython = "^7.18.1"
ipdb = "^0.13.3"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
